--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  google_maps_flutter: ^0.5.12
+  flutter_rating: ^0.0.2
 
 dev_dependencies:
   flutter_test:
